--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 Trivial patches to use sparse in C++ code.
 Probably won't work for you - I only extern'd stuff I use in my own projects.
 
+Installing is a little tricky.. Build the original source first, then install, then
+copy the patched files (include/) to the installation directory.
+
+I have provided a precompiled mingw library.
+
 --
 Silvio Cesare
 silvio.cesare _a_t_ gmail _d_o_t_ com
